[master] style setup

--- a/src/common/styles-init/index.less
+++ b/src/common/styles-init/index.less
@@ -1,10 +1,12 @@
 /* +++++++++++++++++++++++++++++++++ style-file[start] src/common/styles-init/index.less */
 
-@import "~vendor/oban";
+// @import '~vendor/oban';
+@import '~vendor/materialDesign-colors';
+@import '~vendor/normalize.css';
 
-@import './_colors';
-@import './_variables';
-@import './_mixin';
+@import './_helpers/index.less';
+
+@import './_app/index.less';
 
 /* +++++++++++++++++++++++++++++++++ style-file[end]   src/common/styles-init/index.less */
 
