--- a/src/main.less
+++ b/src/main.less
@@ -1,7 +1,7 @@
 /* +++++++++++++++++++++++++++++++++ style-file[start] src/main.less */
 
 @import "~common/styles-init/index";
-.oban-normalize();
+// .oban-normalize();
 
 
 * {
@@ -21,7 +21,7 @@ body {
 
 
 #root-container {
-    .oban-clearfix();
+    .mixin-clearfix();
 }
 
 
