more style setup

--- a/src/common/styles-init/_helpers/index.less
+++ b/src/common/styles-init/_helpers/index.less
@@ -1,4 +1,17 @@
 @import './_breakpoints.less';
-@import './_mixin_clearfix.less';
+@import './_general-layout.less';
+
+
+@import './_shadows.less';
+@import './_elevation.less';
+
+
+@import './_transitions.less';
+
+
+
+
+@import './_clearfix.less';
 @import './_mixin_grid.less';
 @import './_mixin_borders.less';
+
