--- a/src/common/styles-init/_helpers/_breakpoints.less
+++ b/src/common/styles-init/_helpers/_breakpoints.less
@@ -1,21 +1,19 @@
 /* Responsive Breakpoints */
 
 // Old smartphones
-@ef3-breakpoint-xs-max: 320px;
+@breakpoint_xs-max: 320px;
 
 // New smartphones, small tablets
-@ef3-breakpoint-sm-min: 321px;
-@ef3-breakpoint-sm-max: 767px;
+@breakpoint_sm-min: (@breakpoint_xs-max + 1px);
+@breakpoint_sm-max: 767px;
 
 // Tablets, small laptops
-@ef3-breakpoint-md-min: 768px;
-@ef3-breakpoint-md-max: 1200px;
+@breakpoint_md-min: (@breakpoint_sm-max + 1px);
+@breakpoint_md-max: 1200px;
 
 // Laptops, small desktop monitors
-@ef3-breakpoint-lg-min: 1201px;
-@ef3-breakpoint-lg-max: 1919px;
+@breakpoint_lg-min: (@breakpoint_md-max + 1px);
+@breakpoint_lg-max: 1919px;
 
 // HD+ monitors
-@ef3-breakpoint-xl-min: 1920px;
-
-
+@breakpoint_xl-min: (@breakpoint_lg-max + 1px);
