--- a/src/common/styles-init/index.less
+++ b/src/common/styles-init/index.less
@@ -1,12 +1,17 @@
 /* +++++++++++++++++++++++++++++++++ style-file[start] src/common/styles-init/index.less */
 
-// @import '~vendor/oban';
+//-- Choose one reset --//
+  // @import '~vendor/oban';
+  // @import '~vendor/normalize.css';
+  @import '~vendor/reset.css';
+
+
 @import '~vendor/materialDesign-colors';
-@import '~vendor/normalize.css';
+
 
 @import './_helpers/index.less';
-
 @import './_app/index.less';
+
 
 /* +++++++++++++++++++++++++++++++++ style-file[end]   src/common/styles-init/index.less */
 
