added mixin for tiles

--- a/src/common/styles-init/_helpers/index.less
+++ b/src/common/styles-init/_helpers/index.less
@@ -14,5 +14,6 @@
 @import './_clearfix.less';
 @import './_mixin_grid.less';
 @import './_mixin_borders.less';
+@import './_mixin_tiles.less';
 @import './_typography_scales.less';
 
