--- a/src/common/styles-init/_helpers/_mixin_tiles.less
+++ b/src/common/styles-init/_helpers/_mixin_tiles.less
@@ -42,7 +42,7 @@
 
 .mixin-tiles(@columns, @totalColumns:12, @gutterWidth: 20px,  @aspectRatio:1) {
   .getTileDimension(@columns, @totalColumns, @gutterWidth,  @aspectRatio);
-  outline: 1px solid blue;
+  // outline: 1px solid blue;
   position: relative;
   display: inline-block;
   vertical-align: top;
