--- a/src/main.less
+++ b/src/main.less
@@ -1,28 +1,24 @@
-/* +++++++++++++++++++++++++++++++++ style-file[start] src/main.less */
+/* style-file[start] src/main.less */
 
 @import "~common/styles-init/index";
-// .oban-normalize();
-
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html {
-    height: 100%;
+  height: 100%;
 }
 
 body {
-    height: 100%;
-    background-color: @global-background-color;
-    color: @global-text-color;
-    font-family: @global-default-font;
+  height: 100%;
+  background-color: @global-background-color;
+  color: @global-text-color;
+  font-family: @global-default-font;
 }
-
 
 #root-container {
-    .mixin-clearfix();
+  .mixin-clearfix();
 }
 
-
-/* +++++++++++++++++++++++++++++++++ style-file[end]   src/main.less */
+/* style-file[end]   src/main.less */
