refactoring style; clean up

--- a/src/common/styles-init/_app/_app_colors.less
+++ b/src/common/styles-init/_app/_app_colors.less
@@ -1,4 +1,4 @@
-/* +++++++++++++++++++++++++++++++++ style-file[start] src/common/styles-init/_color.less */
+/* ++++ style-file[start] src/common/styles-init/_color.less */
 
 @global-background-color: hsla(0, 0%, 97%, 1);
 
@@ -31,4 +31,4 @@ input {
 }
 
 
-/* +++++++++++++++++++++++++++++++++ style-file[end]   src/common/styles-init/_color.less */
+/* ++++ style-file[end]   src/common/styles-init/_color.less */
