--- a/src/common/styles-init/_app/_app_misc.less
+++ b/src/common/styles-init/_app/_app_misc.less
@@ -1,4 +1,4 @@
-/* +++++++++++++++++++++++++++++++++ file[start] src/common/styles-init/_mixin.less */
+/* ++++ style-file[start] src/common/styles-init/_app_misc.less */
 
 .module-style(@radius) {
   padding: 10px;
@@ -19,5 +19,4 @@
   min-height: 100px;
 }
 
-
-/* +++++++++++++++++++++++++++++++++ file[end]   src/common/styles-init/_mixin.less */
+/* ++++ style-file[end]   src/common/styles-init/_app_misc.less */
