--- a/src/common/styles-init/_app/_app_typography.less
+++ b/src/common/styles-init/_app/_app_typography.less
@@ -1,3 +1,4 @@
+/* ++++ style-file[start] src/common/styles-init/_app_typography.less */
 
 .text__size_button () {
     text-transform: uppercase;
@@ -43,3 +44,5 @@
 .text__size_display-4 () {
     font: 300 112px/1.2em 'Roboto', sans-serif;
 }
+
+/* ++++ style-file[end] src/common/styles-init/_app_typography.less */
