--- a/src/common/styles-init/index.less
+++ b/src/common/styles-init/index.less
@@ -1,4 +1,4 @@
-/* +++++++++++++++++++++++++++++++++ style-file[start] src/common/styles-init/index.less */
+/* ++++ style-file[start] src/common/styles-init/index.less */
 
 //-- Choose one reset --//
 
@@ -18,5 +18,5 @@
 @import './_app/index.less';
 
 
-/* +++++++++++++++++++++++++++++++++ style-file[end]   src/common/styles-init/index.less */
+/* ++++ style-file[end]   src/common/styles-init/index.less */
 
