--- a/src/common/fonts/font-awesome/font-awesome.css
+++ b/src/common/fonts/font-awesome/font-awesome.css
@@ -1,4 +1,4 @@
-/* +++++++++++++++++++++++++++++++++less-file[start] src/common/fonts/font-awesome/index.css */
+/* ++++less-file[start] src/common/fonts/font-awesome/index.css */
 
 /*!
  *  Font Awesome 4.4.0 by @davegandy - http://fontawesome.io - @fontawesome
@@ -2027,5 +2027,5 @@
   content: "\f280";
 }
 
-/* +++++++++++++++++++++++++++++++++less-file[end] src/common/fonts/font-awesome/index.css */
+/* ++++less-file[end] src/common/fonts/font-awesome/index.css */
 
