--- a/src/common/styles-init/_app/_app_variables.less
+++ b/src/common/styles-init/_app/_app_variables.less
@@ -1,4 +1,4 @@
-/* +++++++++++++++++++++++++++++++++ style-file[start] src/common/styles-init/_variables.less */
+/* ++++ style-file[start] src/common/styles-init/_variables.less */
 
 @tiny: 1px;
 @small: 3px;
@@ -7,4 +7,4 @@
 
 @global-border-radius: 3px;
 
-/* +++++++++++++++++++++++++++++++++ style-file[end]   src/common/styles-init/_variables.less */
+/* ++++ style-file[end]   src/common/styles-init/_variables.less */
