--- a/src/main.less
+++ b/src/main.less
@@ -1,4 +1,4 @@
-/* style-file[start] src/main.less */
+/* ++++ style-file[start] src/main.less */
 
 @import "~common/styles-init/index";
 
@@ -21,4 +21,4 @@ body {
   .mixin-clearfix();
 }
 
-/* style-file[end]   src/main.less */
+/* ++++ style-file[end]   src/main.less */
