--- a/src/this-app/styles.less
+++ b/src/this-app/styles.less
@@ -1,9 +1,12 @@
-/* style-file[start] src/modules/this-app/styles.less */
+/* ++++ style-file[start] src/this-app/styles.less */
 
 @import "~common/styles-init/index";
 
 :local(.module-style) {
-
 }
 
-/* style-file[end]   src/modules/this-app/styles.less */
+.this-app {
+  outline: solid blue 3px;
+  .mixin-clearfix();
+}
+/* ++++ style-file[end]   src/this-app/styles.less */
