refactor to have app style into a sperate folder

--- a/src/modules/elevation-test/style.less
+++ b/src/modules/elevation-test/style.less
@@ -1,4 +1,6 @@
-@import "~common/styles-init/index";
+/* ++++ style-file: modules/elevation-test/style.less [start] */
+
+@import "~common/styles/index";
 
 :local(.module-style) {
   .mixin-module-style(#fff);
@@ -35,3 +37,5 @@
   }
 
 }
+
+/* ++++ style-file: modules/elevation-test/style.less [end] */
