--- a/src/modules/grids-demo/style.less
+++ b/src/modules/grids-demo/style.less
@@ -1,4 +1,6 @@
-@import "~common/styles-init/index";
+/* ++++ style-file: modules/grid-demo/style.less [start] */
+
+@import "~common/styles/index";
 
 :local(.module-style) {
   .mixin-module-style(#fff);
@@ -33,3 +35,5 @@
     .mixin-column(6, 12, @gutter);
   }
 }
+
+/* ++++ style-file: modules/grid-demo/style.less [end] */
