--- a/src/modules/tiles-demo/style.less
+++ b/src/modules/tiles-demo/style.less
@@ -1,4 +1,6 @@
-@import "~common/styles-init/index";
+/* ++++ style-file: modules/tiles-demo/style.less [start] */
+
+@import "~common/styles/index.less";
 
 :local(.module-style) {
     .tiles {
@@ -34,3 +36,5 @@
     }
 
 }
+
+/* ++++ style-file: modules/tiles-demo/style.less [end] */
