--- a/src/modules/typography-test/style.less
+++ b/src/modules/typography-test/style.less
@@ -1,4 +1,6 @@
-@import "~common/styles-init/index";
+/* ++++ style-file: modules/typography-test/style.less [start] */
+
+@import "~common/styles/index.less";
 
 :local(.module-style) {
   .mixin-module-style(#dff);
@@ -39,3 +41,5 @@
     .text__size_relative(4);
   }
 }
+
+/* ++++ style-file: modules/typography-test/style.less [end] */
