--- a/src/root-app/main-layout/style.less
+++ b/src/root-app/main-layout/style.less
@@ -1,4 +1,6 @@
-@import "~common/styles-init/index";
+/* ++++ style-file src/root-app/main-layout.less [start] */
+
+@import "~common/styles/index.less";
 
 :local(.module-style) {
   @menu-width: 150px;
@@ -17,3 +19,4 @@
   }
 }
 
+/* ++++ style-file src/root-app/main-layout.less [end] */
