--- a/src/root-app/styles/app-style-init/_app-misc.less
+++ b/src/root-app/styles/app-style-init/_app-misc.less
@@ -1,4 +1,4 @@
-/* ++++ style-file[start] src/common/styles-init/_app_misc.less */
+/* ++++ style-file: root-app/styles/app-style-init/_app-misc.less [start]*/
 
 .module-style(@radius) {
   padding: 10px;
@@ -19,4 +19,4 @@
   min-height: 100px;
 }
 
-/* ++++ style-file[end]   src/common/styles-init/_app_misc.less */
+/* ++++ style-file: root-app/styles/app-style-init/_app-misc.less [end]*/
