--- a/src/root-app/styles/app-style-init/_app-typography.less
+++ b/src/root-app/styles/app-style-init/_app-typography.less
@@ -1,4 +1,6 @@
-/* ++++ style-file[start] src/common/styles-init/_app_typography.less */
+/* ++++ style-file: root-app/styles/app-style-init/_app-typography.less [start]*/
+
+@global-default-font: RobotoLight;
 
 .text__size_button () {
     text-transform: uppercase;
@@ -45,4 +47,4 @@
     font: 300 112px/1.2em 'Roboto', sans-serif;
 }
 
-/* ++++ style-file[end] src/common/styles-init/_app_typography.less */
+/* ++++ style-file: root-app/styles/app-style-init/_app-typography.less [end]*/
