--- a/src/widgets/simple-navigation/style.less
+++ b/src/widgets/simple-navigation/style.less
@@ -1,4 +1,6 @@
-@import "~common/styles-init/index";
+/* ++++ style-file widget/simple-navigation.less [start] */
+
+@import "~common/styles/index.less";
 
 :local(.module-style) {
   .mixin-clearfix();
@@ -38,3 +40,5 @@
     }
   }
 }
+
+/* ++++ style-file widget/simple-navigation.less [end] */
