--- a/src/modules/font-test/style.less
+++ b/src/modules/font-test/style.less
@@ -1,6 +1,6 @@
-/* +++++++++++++++++++++++++++++++++ style-file[start] modules/font-test/style.less */
+/* ++++ style-file: modules/font-test/style.less [start] */
 
-@import "~common/styles-init/index";
+@import "~common/styles/index.less";
 
 :local(.module-style) {
   .mixin-module-style(#dfd);
@@ -16,4 +16,4 @@
   }
 }
 
-/* +++++++++++++++++++++++++++++++++ style-file[end]   modules/font-test/style.less */
+/* ++++ style-file: modules/font-test/style.less [end] */
