--- a/src/modules/layout-demo/style.less
+++ b/src/modules/layout-demo/style.less
@@ -1,6 +1,6 @@
-/* +++++++++++++++++++++++++++++++++ style-file[start] modules/font-test/style.less */
+/* ++++ style-file: modules/layout-demo/style.less [start] */
 
-@import "~common/styles-init/index";
+@import "~common/styles/index";
 
 :local(.module-style) {
     .mixin-module-style(#fff);
@@ -44,4 +44,4 @@
 
 }
 
-/* +++++++++++++++++++++++++++++++++ style-file[end]   modules/font-test/style.less */
+/* ++++ style-file: modules/layout-demo/style.less [end] */
