--- a/src/root-app/styles/app-style-init/_app-colors.less
+++ b/src/root-app/styles/app-style-init/_app-colors.less
@@ -1,14 +1,13 @@
-/* ++++ style-file[start] src/common/styles-init/_color.less */
+/* ++++ style-file: root-app/styles/app-style-init/_app-colors.less [start]*/
 
-@global-background-color: hsla(0, 0%, 97%, 1);
-
-@global-default-font: RobotoLight;
-@global-text-color: @materialDesign-lightBg-secondaryText;
+@global-background-color:     hsla(0, 0%, 97%, 1);
+@global-text-color:           @materialDesign-lightBg-secondaryText;
 @global-text-color-secondary: @materialDesign-lightBg-secondaryText;
-@global-text-color-disabled: @materialDesign-lightBg-disabledText;
-@global-text-color-hintText: @materialDesign-lightBg-hintText;
+@global-text-color-disabled:  @materialDesign-lightBg-disabledText;
+@global-text-color-hintText:  @materialDesign-lightBg-hintText;
 
-@placeholder-color: @global-text-color-hintText;
+
+@placeholder-color:           @global-text-color-hintText;
 input::-webkit-input-placeholder { /* WebKit, Blink, Edge */
   color:  @placeholder-color;
 }
@@ -31,4 +30,4 @@ input {
 }
 
 
-/* ++++ style-file[end]   src/common/styles-init/_color.less */
+/* ++++ style-file: root-app/styles/app-style-init/_app-colors.less [end]*/
