[refactoring] application specific style is import in root-app name space

--- a/src/common/styles/index.less
+++ b/src/common/styles/index.less
@@ -1,4 +1,4 @@
-/* ++++ style-file src/common/index.less [start] */
+/* ++++ style-file: common/styles/index.less [start] */
 
 /* Reset browser default [begin] */
   // @import '~vendor/oban'; .oban-normalize();
@@ -14,13 +14,9 @@
   @import './style-lib/_helpers/index.less';
 /* Importing style helpers [complete]*/
 
-/* Importing application specify style initialize [begin]*/
-  @import '~root-app/styles/app-style-init/index.less';
-/* Importing application specify style initialize [end]*/
-
-// @import './_widgets/index.less';
-// @import './_app/index.less';
+/* Importing style widgets [begin]*/
+  @import './style-lib/_widgets/index.less';
+/* Importing style widgets [complete]*/
 
 
-/* ++++ style-file src/common/index.less [end] */
-
+/* ++++ style-file: common/styles/index.less [end] */
