--- a/src/main.less
+++ b/src/main.less
@@ -1,4 +1,4 @@
-/* ++++ style-file main.less [start] */
+/* ++++ style-file: main.less [start] */
 
 @import "~common/styles/index.less";
 
@@ -23,4 +23,4 @@
 /* Root Container Reset [completed] */
 
 
-/* ++++ style-file main.less [end]   */
+/* ++++ style-file: main.less [end]   */
