--- a/src/modules/font-test/style.less
+++ b/src/modules/font-test/style.less
@@ -3,7 +3,7 @@
 @import "~common/styles/index.less";
 
 :local(.module-style) {
-  .mixin-module-style(#dfd);
+  // .mixin-module-style(#dfd);
   .thin { font-family: 'RobotoThin'; }
   .light { font-family: 'RobotoLight'; }
   .regular { font-family: 'RobotoRegular'; }
@@ -11,9 +11,9 @@
   .bold { font-family: 'RobotoBold'; }
   .black { font-family: 'RobotoBlack'; }
 
-  .text__size_subheading {
-    .text__size_subheading ();
-  }
+  // .text__size_subheading {
+  //   .text__size_subheading ();
+  // }
 }
 
 /* ++++ style-file: modules/font-test/style.less [end] */
