--- a/src/modules/layout-demo/style.less
+++ b/src/modules/layout-demo/style.less
@@ -3,7 +3,7 @@
 @import "~common/styles/index";
 
 :local(.module-style) {
-    .mixin-module-style(#fff);
+    // .mixin-module-style(#fff);
 
     .layout {
       width: 100%;
