--- a/src/root-infarstructure/style.less
+++ b/src/root-infarstructure/style.less
@@ -1,4 +1,4 @@
-/* ++++ style-file: root/style.less [start] */
+/* ++++ style-file: root-infarstructure/style.less [start] */
 
 @import "~common/styles/index";
 
@@ -6,4 +6,4 @@
     height: 100%;
 }
 
-/* ++++ style-file: root/style.less [end] */
+/* ++++ style-file: root-infarstructure/style.less [end] */
