--- a/src/modules/grids-demo/style.less
+++ b/src/modules/grids-demo/style.less
@@ -3,7 +3,7 @@
 @import "~common/styles/index";
 
 :local(.module-style) {
-  .mixin-module-style(#fff);
+  // .mixin-module-style(#fff);
 
   @gutter: 10px;
   .row + .row {
