[refactor] with theme-a configurable style

--- a/src/common/styles/style-lib/_widgets/_circle-button.less
+++ b/src/common/styles/style-lib/_widgets/_circle-button.less
@@ -1,3 +1,4 @@
+/* ++++ style-file: widget/_circle-button.less [start] */
 
 .circleButton(@size: 40px, @color, @adjustment: 0px ) {
    @colorBorder: @color;
@@ -64,3 +65,5 @@
 //      right: 100px;
 //      .circleButton( @buttonSize, blue, 1px);
 //   }
+
+/* ++++ style-file: widget/_circle-button.less [end] */
