--- a/src/widgets/simple-navigation/style.less
+++ b/src/widgets/simple-navigation/style.less
@@ -4,40 +4,35 @@
 
 :local(.module-style) {
   .mixin-clearfix();
-  margin: 0px;
-  padding: 5px 0px;
-  .horizotal {
-    ul {
-      margin: 0px;
-      padding: 0px;
-      list-style-type: none;
-      li + li {
-        margin-left: 5px;
-      }
-      li {
-        display: inline;
-        line-height: 1.5;
-        background: #eee;
-      }
-    }
-    a {
-      display: inline;
-      padding: 3px 5px;
-      line-height: 1.5;
-      text-decoration: none;
+
+  ul {
+    list-style-type: none;
+    li {
       background: #eee;
-      outline: 1px solid yellow;
-      &:hover {
-        color: red;
-      }
-      outline: none;
-      &:focus {
-        outline: none;
-      }
-      &.is-active {
-        color: red;
-      }
     }
+  }
+
+  a {
+    display: inline;
+    line-height: 1.5;
+    text-decoration: none;
+    background: #eee;
+
+    outline: none;
+    &:hover {
+      color: red;
+    }
+    &:focus {
+      outline: none;
+    }
+    &.is-active {
+      color: red;
+    }
+
+  }
+
+  .horizontal {
+    li { display: inline; }
   }
 }
 
